# balanced_group_system

./: BalancedGroupSystem.py  LICENSE  README.md  balanced_group_system.py  group_system.py  pyproject.toml
.github/workflows/: tests.yaml
balanced_group_system/: __init__.py  available_group_scheduler.py  balanced_group_system.cpp  balanced_group_system.hpp  balanced_group_system.py  group_system.cpp  group_system.hpp  group_system.py  main.cpp  parser.py  test_balanced_group_system.cpp  test_group_system.cpp
examples/create_random_teams/: main.py  participants.csv  requirements.txt
test/: test_group_system.py
tests/: test_available_group_scheduler.py  test_balanced_group_system.py  test_balanced_group_system_performance.py  test_group_system.py
