[tool.poetry]
name = "balanced-group-system"
version = "0.1.0"
description = "A simple system to balance groups of people based on their preferences"
authors = ["Joshua Si <joshuasi777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
